...
      ListHeaderComponent={
        <View>
          <View style={globalStyles.header}>
            <Text style={[globalStyles.title, { color: colors.text }]}>
              {t("allMeals.title")}
            </Text>
            <TouchableOpacity onPress={toggleSelectionMode} testID="toggle-edit-mode">
              <Text style={[styles.editButton, { color: colors.accent }]}>
                {selectionMode ? t("allMeals.done") : t("allMeals.editMode")}
              </Text>
            </TouchableOpacity>
          </View>

...
